# cmple

./: .gitignore  README.md  cmple.h
tests/: README.md
tests/testing_maths/: .gitignore  CMakeLists.txt  README.md
tests/testing_maths/src/: date.c  date.h  fact.c  fact.h  matrix.c  matrix.h
tests/testing_maths/tests/: arrays.test.c  date.test.c  fact.test.c  matrix.test.c  string.test.c  test.config.h
